# ccdr-extraction-workflow

./: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  extract_ccdrs.py  package-lock.json  package.json  pyproject.toml
.cursor/rules/: aws_s3.mdc  general.mdc  python.mdc  scraping.mdc  writing-code.mdc
.github/workflows/: monthly-extraction.yml
data/: publication_links.json
discovery/: .env.example  1_extract_publication_links.py  2_extract_publication_details.py  3_add_ids.py  4_classify_file_types.py  5_filter_download_links.py  6_download_files.py  7_convert_bin_files.sh  8_db_schema_design.md  9_db_setup.py  add_publication_ids.py  cluster_vector_graphics.py  extract_images.py  extract_images_from_page.py  extract_publication_links.py  extract_text_from_page.py  extract_vector_graphics.py  filter_download_links.py  ingest_pdfs.py  pdf_to_markdown.py
discovery/data/: publication_details.json  publication_links.json
extract/: .env.example  1_extract_publication_links.py  2_extract_publication_details.py  3_add_ids.py  4_classify_file_types.py  5_filter_download_links.py  6_download_files.py  7_convert_bin_files.sh  8_db_schema_design.md  add_ids.py  classify.py  classify_document_types.py  classify_file_types.py  classify_mime_types.py  convert_bin_files.py  db.py  download_files.py  extract_publication_details.py  extract_publication_links.py  schema.py  upload_pdfs_to_aws_s3.py  upload_pdfs_to_aws_s3.sh  upload_pdfs_to_openai.py  upload_pubs_to_db.py  verify_document_classifications.py
load/: .env.example  1_db_setup.py  2_upload_pdfs_to_openai.py  3_aws_s3_setup.sh  4_upload_pubs_to_db.py  classify_geography.py  db.py  db_setup.py  pub_dl_upload.py  pub_dl_upload_to_db.py  pub_dl_upload_to_oai.py  s3_setup.md  schema.py  upload_pdfs_to_aws_s3.py  upload_pdfs_to_openai.py  upload_pubs_to_db.py
transform/: .env.example  1_db_schema_design.md  1_extract_images.py  2_combine_document_regions.py  2_extract_images.py  3_extract_text_from_page.py  4_extract_text_from_page.py  4_identify_sections.py  5_extract_hierarchical_headings.py  5_get_headings.py  6_chunk_text.py  7_organize_chunks.py  8_chunk_text.py  9_organize_chunks.py  extract_images.py  ingest_pdfs.py  pdf_to_markdown.py
