[project]
name = "nature-finance-rag-api"
version = "0.1.0"
description = "Nature Finance data ingestion and RAG database deployment pipeline IMF CCDR semantic search API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "boto3>=1.38.41",
    "langcodes>=3.5.0",
    "litellm>=1.65.1",
    "openai>=1.69.0",
    "playwright>=1.51.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "types-requests>=2.32.0.20250328",
    "types-tqdm>=4.67.0.20250417",
]
