[project]
name = "ccdr-extraction-workflow"
version = "0.1.0"
description = "Data scraping pipeline for CCDR semantic search API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "boto3>=1.38.41",
    "langcodes>=3.5.0",
    "openai>=1.69.0",
    "playwright>=1.51.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.39.0",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "types-requests>=2.32.0.20250328",
    "types-tqdm>=4.67.0.20250417",
]
